--- a/sth-header.html
+++ b/sth-header.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../polymer/polymer-element.html" />
 
 <dom-module id="sth-header">
   <template>
@@ -6,8 +6,130 @@
       :host {
         display: block;
       }
+
+      .header {
+        background-color: rgba(9, 103, 181, 0.911);
+        display: flex;
+        height: 50px;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+      }
+
+      .bar-nav {
+        list-style: none;
+        text-decoration: none;
+        color: rgba(1, 57, 102, 0.911);
+        /*Si le cambia el color a los puntos pero no el estilo :v*/
+        display: flex;
+        height: 60px;
+        align-items: center;
+        padding: 0;
+        list-style: none;
+      }
+      .menu li a {
+        background-color: rgba(14, 112, 192, 0.911);
+        color: rgb(223, 227, 240);
+        text-decoration: none;
+        padding: 10px 15px;
+        display: block;
+        list-style: none;
+      }
+
+      .menu li ul {
+        display: none; /*esconde los submenus*/
+        position: absolute;
+        min-width: 140px;
+        list-style: none;
+      }
+
+      .menuli a:hover {
+        background-color: cornflowerblue;
+      }
+
+      .menu li:hover > ul {
+        display: block;
+      }
+
+      .buscar {
+        margin: 40px;
+      }
+
+      .buscar input {
+        width: 280px;
+        color: rgb(3, 44, 71);
+        border-color: gray;
+        border-radius: 15px;
+        padding: 15px;
+        background-image: url("seach-icon.png");
+        background-size: 15px 20px;
+        background-repeat: no-repeat;
+        background-position-y: center;
+      }
+
+      .registro {
+        margin: 30px;
+        text-decoration: none;
+        color: aliceblue;
+        background-color: rgba(45, 149, 235, 0.911);
+        width: 210px;
+        border: 1px solid;
+        border-radius: 18px;
+        padding: 3px 5px;
+        background-image: url("user.png");
+        background-size: 30px 30px;
+        background-repeat: no-repeat;
+        background-position-y: center;
+        background-position-x: right;
+      }
+
+      .share {
+        margin: 30px;
+        width: 100px;
+        text-decoration: none;
+        color: rgb(244, 247, 250);
+        background-color: rgba(94, 197, 94, 0.911);
+        border: 1px solid;
+        border-radius: 18px;
+        padding: 3px 5px;
+        background-image: url("share.png");
+        background-size: 30px 30px;
+        background-repeat: no-repeat;
+        background-position-y: center;
+        background-position-x: right;
+      }
     </style>
-    <h2>Hello [[prop1]]!</h2>
+
+    <header class="header">
+      <h2>shareToHelp</h2>
+
+      <!--Aquí es el espacio para el Menú-->
+      <nav class="menu">
+        <li>
+          <a href="">Menú</a>
+          <ul>
+            <li><a href="">Telefonía</a></li>
+            <li><a href="">Deportes</a></li>
+            <li><a href="">Hogar</a></li>
+            <li><a href="">Ropa</a></li>
+          </ul>
+        </li>
+      </nav>
+
+      <nav class="bar-nav">
+        <li class="buscar">
+          <input placeholder="Buscar Artículos" />
+        </li>
+
+        <li class="registro">
+          <p href="">Regístrate / Inicia Sesión</p>
+        </li>
+
+        <li class="share">
+          <p>Compartir</p>
+        </li>
+      </nav>
+    </header>
   </template>
 
   <script>
@@ -20,13 +142,15 @@
      * @demo demo/index.html
      */
     class SthHeader extends Polymer.Element {
-      static get is() { return 'sth-header'; }
+      static get is() {
+        return "sth-header";
+      }
       static get properties() {
         return {
           prop1: {
             type: String,
-            value: 'sth-header'
-          }
+            value: "sth-header",
+          },
         };
       }
     }
